added StyleCop and .gitignore

--- a/logger-1/logger-1/logger-1.csproj
+++ b/logger-1/logger-1/logger-1.csproj
@@ -4,6 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>logger_1</RootNamespace>
-  </PropertyGroup>
+  <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <NoWarn>SA0001;SA1633</NoWarn>
+	</PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
